legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr35439.c-5.4.0-0.out.txt
pr35439.c:5:6: error: declaration of ‘x’ as array of voids
 void x[1];  
      ^
